make memory policy get methods return unmodifiable objects