@@ -6,6 +6,7 @@ import gov.nist.csd.pm.policy.review.GraphReview;
 
 import java.io.Serializable;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -14,11 +15,11 @@ public abstract class Subject implements Serializable {
     protected List<String> subjects;
 
     public Subject(List<String> subjects) {
-        this.subjects = subjects;
+        this.subjects = Collections.unmodifiableList(subjects);
     }
 
     public Subject(String ... subjects) {
-        this.subjects = new ArrayList<>(List.of(subjects));
+        this.subjects = Collections.unmodifiableList(new ArrayList<>(List.of(subjects)));
     }
 
     public abstract boolean matches(UserContext userCtx, GraphReview graphReview) throws PMException;
